--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: plug1
 description: A new Flutter plugin project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/Samuel310/plug1
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
